<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/keyboard_padding"
    android:background="@color/white" >

    <!-- The MathSymbolEditor -->
    <HorizontalScrollView
        android:id="@+id/mathSymbolEditorScroller"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:minHeight="@dimen/math_symbol_editor_min_height"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:requiresFadingEdge="horizontal"
        android:fillViewport="true" >

        <org.teaminfty.math_dragon.view.MathSymbolEditor
            android:id="@+id/mathSymbolEditor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
        
    </HorizontalScrollView>

    <!-- Tabs -->
    <LinearLayout
        android:id="@+id/keyboard_tabs"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/mathSymbolEditorScroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/btn_tab_numpad"
            style="@style/TabButton"
            android:text="@string/numpad"
            android:textOff="@string/numpad"
            android:textOn="@string/numpad" />

        <ToggleButton
            android:id="@+id/btn_tab_variables"
            style="@style/TabButton"
            android:text="@string/variables"
            android:textOn="@string/variables"
            android:textOff="@string/variables" />

    </LinearLayout>
    
    <!-- Dialog buttons -->
    <LinearLayout
        android:id="@+id/keyboard_dialog_buttons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >
        
		<ImageButton
		    android:id="@+id/keyboardButtonDelete"
		    style="@style/KeyboardButton"
		    android:src="@drawable/backspace"
		    android:contentDescription="@string/backspace" />
		
		<ImageButton
		    android:id="@+id/keyboardButtonClear"
		    style="@style/KeyboardButton"
		    android:src="@drawable/clear"
		    android:contentDescription="@string/clear" />
        
		<ImageButton
		    android:id="@+id/keyboardButtonCancel"
		    style="@style/KeyboardButton"
		    android:src="@drawable/cross"
		    android:contentDescription="@string/cancel" />
		
		<ImageButton
		    android:id="@+id/keyboardButtonConfirm"
		    style="@style/KeyboardButton"
		    android:src="@drawable/check"
		    android:contentDescription="@string/ok" />
    </LinearLayout>

    <!-- Numpad keyboard -->    <LinearLayout
        android:layout_alignParentLeft="true"
        android:layout_below="@id/keyboard_tabs"
        android:layout_above="@id/keyboard_dialog_buttons"
        android:id="@+id/table_keyboard_numpad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
    	android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:orientation="horizontal"
        	android:gravity="center" >

            <Button
                android:id="@+id/keyboardButton1"
                android:tag="keyboardButton1"
                style="@style/KeyboardButton"
                android:text="1" />

            <Button
                android:id="@+id/keyboardButton2"
                android:tag="keyboardButton2"
                style="@style/KeyboardButton"
                android:text="2" />

            <Button
                android:id="@+id/keyboardButton3"
                android:tag="keyboardButton3"
                style="@style/KeyboardButton"
                android:text="3" />
            
			<ToggleButton
			    android:id="@+id/keyboardButtonX"
        		android:layout_gravity="center"
			    style="@style/KeyboardButtonSmall"
			    android:layout_margin="@dimen/keyboard_button_small_margin"
			    android:text="x"
			    android:textOff="x"
			    android:textOn="x" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:orientation="horizontal"
        	android:gravity="center" >

            <Button
                android:id="@+id/keyboardButton4"
                android:tag="keyboardButton4"
                style="@style/KeyboardButton"
                android:text="4" />

            <Button
                android:id="@+id/keyboardButton5"
                android:tag="keyboardButton5"
                style="@style/KeyboardButton"
                android:text="5" />

            <Button
                android:id="@+id/keyboardButton6"
                android:tag="keyboardButton6"
                style="@style/KeyboardButton"
                android:text="6" />
            
			<Button
			    android:id="@+id/keyboardButtonPlus"
			    style="@style/KeyboardButton"
			    android:text="+" />
			
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:orientation="horizontal"
        	android:gravity="center" >

            <Button
                android:id="@+id/keyboardButton7"
                android:tag="keyboardButton7"
                style="@style/KeyboardButton"
                android:text="7" />

            <Button
                android:id="@+id/keyboardButton8"
                android:tag="keyboardButton8"
                style="@style/KeyboardButton"
                android:text="8" />

            <Button
                android:id="@+id/keyboardButton9"
                android:tag="keyboardButton9"
                style="@style/KeyboardButton"
                android:text="9" />
			
			<Button
			    android:id="@+id/keyboardButtonMinus"
			    style="@style/KeyboardButton"
			    android:text="-" />
			
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:orientation="horizontal"
        	android:gravity="center" >

            <Button
                android:id="@+id/keyboardButton0"
                android:tag="keyboardButton0"
                style="@style/KeyboardButton"
                android:text="0" />
            
            <ToggleButton
                android:id="@+id/keyboardButtonPi"
                style="@style/KeyboardButton"
                android:text="@string/pi"
                android:textOff="@string/pi"
                android:textOn="@string/pi" />

            <ToggleButton
                android:id="@+id/keyboardButtonE"
                style="@style/KeyboardButton"
                android:text="@string/e_eulers_number"
                android:textOff="@string/e_eulers_number"
                android:textOn="@string/e_eulers_number" />
            
            <ToggleButton
                android:id="@+id/keyboardButtonI"
                style="@style/KeyboardButton"
                android:text="@string/iota"
                android:textOff="@string/iota"
                android:textOn="@string/iota" />
			
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >
            
			<Button
			    android:id="@+id/keyboardButtonNegate"
        		android:layout_gravity="center"
			    style="@style/KeyboardButtonSmall"
			    android:layout_margin="@dimen/keyboard_button_small_margin"
			    android:text="@string/plusminus" />
			
			<Button
			    android:id="@+id/keyboardButtonDot"
        		android:layout_gravity="center"
			    style="@style/KeyboardButtonSmall"
			    android:layout_margin="@dimen/keyboard_button_small_margin"
			    android:text="@string/dot" />
	
        </LinearLayout>
    </LinearLayout>
    
    <!-- Variables keyboard -->
    <LinearLayout
        android:id="@+id/table_keyboard_variables"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/keyboard_tabs"
        android:layout_above="@id/keyboard_dialog_buttons"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
    	android:gravity="center"
    	android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>